# titi-lang

./: Cargo.toml  README.md
docs/: syntaxes.md
src/: interpreter.rs  main.rs
src/ast/: Cargo.toml
src/ast/src/: ast.rs  lib.rs  top_level.rs  top_level_function.rs
src/compiler/: lexer.rs  mod.rs  parser.rs  token.rs  token_builder.rs
src/diagnostic/: Cargo.toml
src/diagnostic/src/: global_instance.rs  level.rs  lib.rs  multi_span.rs
src/high_lexer/: Cargo.toml
src/high_lexer/src/: lib.rs  symbols.rs
src/high_lexer/src/token/: mod.rs  token.rs  token_assign_op_kind.rs  token_binary_op_kind.rs  token_cmp_op_kind.rs  token_kind.rs  token_literal.rs  token_literal_kind.rs  token_unary_op_kind.rs
src/hir/: Cargo.toml
src/hir/src/: analysis.rs  deduce.rs  lib.rs  lookup.rs  ops.rs  resolve.rs  resolve_module.rs
src/hir/src/make_global/: expr.rs  function.rs  mod.rs  object.rs  stmt.rs  struct.rs  ty.rs
src/hir/src/make_global/in_fn/: expr.rs  mod.rs  object.rs  stmt.rs
src/hir/src/to_global_module/: mod.rs
src/interpreter/: Cargo.toml
src/interpreter/src/: check.rs  exec.rs  lib.rs  parsed.rs
src/interpreter/src/parsed/: mod.rs
src/lexer/: Cargo.toml
src/lexer/src/: cursor.rs  lexer.rs  lib.rs
src/lexer/src/token/: mod.rs  token.rs  token_error_kind.rs  token_float_literal.rs  token_integer_literal.rs  token_integer_literal_kind.rs  token_kind.rs  token_literal_kind.rs
src/low_lexer/: Cargo.toml
src/low_lexer/src/: cursor.rs  lib.rs  test.rs
src/low_lexer/src/token/: mod.rs  token_error_kind.rs  token_integer_literal_kind.rs  token_kind.rs  token_literal_kind.rs  token_number_literal.rs  token_number_literal_kind.rs  token_str_literal.rs
src/mir/: Cargo.toml
src/mir/src/: lib.rs  transform.rs  transform_expr.rs  transform_expr_lhs.rs  ty_interner.rs
src/mir/src/deduce/: expr.rs  lookup.rs  mod.rs  ops.rs
src/mir/src/ty/: expr.rs  lookup.rs  mod.rs  ops.rs  ty_interner.rs
src/parser/: Cargo.toml
src/parser/src/: cursor.rs  lib.rs  parser.rs
src/span/: Cargo.toml
src/span/src/: lib.rs  line_col.rs  loc.rs  pos.rs  source.rs  source_map.rs  source_path.rs  span.rs  span_loc.rs
src/str_interner/: Cargo.toml
src/str_interner/src/: global_instance.rs  lib.rs  str_chunk.rs  str_idx.rs
test/: main.tt  mod.tt  next.tt
test/inner/: lib.tt
