[package]
name = "titi-lang"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
low_lexer = { path = "src/low_lexer" }
high_lexer = { path = "src/high_lexer" }
span = { path = "src/span" }
str_interner = { path = "src/str_interner" }
lazy_static = { version = "1" }
