[package]
name = "titi-lang"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "src/ast" }
clap = { version = "2" }
diagnostic = { path = "src/diagnostic", features = ["global_instance"] }
high_lexer = { path = "src/high_lexer" }
hir = { path = "src/hir" }
mir = { path = "src/mir" }
parser = { path = "src/parser" }
span = { path = "src/span" }

[workspace]
