[package]
name = "interpreter"
version = "0.0.1"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
diagnostic = { path = "../diagnostic", features = ["global_instance"] }
high_lexer = { path = "../high_lexer" }
parser = { path = "../parser" }
span = { path = "../span" }
