[package]
name = "mir"
version = "0.0.1"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
diagnostic = { path = "../diagnostic", features = ["global_instance"] }
high_lexer = { path = "../high_lexer" }
hir = { path = "../hir" }
lazy_static = "1"
parking_lot = "0.11"
rustc-hash = "1"
span = { path = "../span" }
