[package]
name = "str_interner"
version = "0.0.1"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1", optional = true }
parking_lot = { version = "0.11", optional = true }
rustc-hash = "1"

[features]
global_instance = ["lazy_static", "parking_lot"]
